# hxrpc

./: .gitignore  CMakeLists.txt  Learn.md  README.md  RUN_ON_WSL.md  server.yaml  test.conf
benchmark/: CMakeLists.txt
benchmark/client/: CMakeLists.txt  client.cc
benchmark/server/: CMakeLists.txt  server.cc
docs/: debug-m1.1-postmortem.md
example/: CMakeLists.txt  user.pb.cc  user.pb.h
example/callee/: CMakeLists.txt  server.cc
example/caller/: CMakeLists.txt  client.cc
src/: CMakeLists.txt  application.cc  async_runtime.cc  channel.cc  client_transport.cc  codec.cc  config.cc  connection_manager.cc  controller.cc  header.pb.cc  header.proto  logger.cc  message_pool.cc  provider.cc  reactor.cc  rpc_client.cc  rpc_dispatcher.cc  rpc_server.cc  serializer.cc  service_discovery.cc  service_registry.cc  settings.cc  string_utils.cc  types.cc  zookeeperutil.cc
src/include/: Logger.h  application.h  async_runtime.h  channel.h  client_transport.h  codec.h  config.h  connection_manager.h  controller.h  header.pb.h  logger.h  message_pool.h  provider.h  reactor.h  rpc_client.h  rpc_dispatcher.h  rpc_server.h  serializer.h  service_discovery.h  service_registry.h  settings.h  status_helper.h  string_utils.h  task.h  types.h  zookeeperutil.h
tests/: CMakeLists.txt  client_transport_reuse_test.cc  codec_test.cc  config_test.cc  connection_boundary_test.cc  coroutine_client_test.cc  discovery_test.cc  dispatcher_test.cc  end_to_end_test.cc  failure_test.cc  message_pool_test.cc  metadata_test.cc  test_support.h
